# loggy-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile
k8s/: daemonset.yaml
src/: main.rs  main.rs.bak
