[package]
name = "loggy-rs"
version = "0.1.0"
authors = ["Brennon Loveless <brennon.loveless@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4.0.15"
tokio = { version = "1.0.1", features = [ "full" ] }
chrono = "0.4.19"
regex = "1.4.3"
